--- a/assets/app/templates/portfolio.phtml
+++ b/assets/app/templates/portfolio.phtml
@@ -1,8 +1,4 @@
-[[$head?
-&style=`1`
-&media=`1`
-&classes=`protfolio`
-]]
+[[$head?&style=`1`&media=`1`&classes=`protfolio`]]
 
 <header class="neww-headers">
     <div class="numb">
@@ -159,11 +155,7 @@
             console.log(sortedGor);
             $('.collection-wraper').html(sortedGor);
         }
-        
-        
-        
-        
-        
+
         $('#selectyMenuBoxi li').on('click', function () {
             var data = $(this).data('parent');
             $.get({
