--- a/assets/app/templates/blog.phtml
+++ b/assets/app/templates/blog.phtml
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Virtual reality</title>
+[[$head?&style=`1`&media=`1`&classes=`blog`]]
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/media.css">
-
-
-
-
-</head>
-
-
-<body>
 <header class="heady neww-headers">
 
 
@@ -23,209 +8,108 @@
         <div class="numbers numb2"><div class="hd"><span>01.</span></div></div><div class="numbers numb3"><div class="hd"><span>02.</span></div></div>
     </div>
 
-
-
-
     <div class="main-menu">
-        <ul>
-
-            <li><a href="/">about</a></li>
-            <li><a href="/portfolio.html">portfolio</a></li>
-            <li><a href="/">blog</a></li>
-            <li><a href="/">contact</a></li>
-        </ul></div>
-
+        <ul>[[$main_menu]]</ul>
+    </div>
 
 
     <div class="head-line">
-        <div class="logo"><a href="/"><img src="./img/logo.png" alt=""></a></div><div class="lang lang-mark"><div class="lang-block"><ul><li class="langv">ru</li>
-                    <li class="langv acti">en</li></ul></div></div>   <div class="menu"><img src="./img/menu.png" alt=""></div> <div class="langy"><div class="lang-block"><ul><li class="langv">ru</li><li class="langv acti">en</li></ul></div></div>
-
+        <div class="logo">
+            <a href="[[++site_url]]">
+                <img src="/assets/img/logo.png" alt="">
+            </a>
+        </div>
+        <div class="lang lang-mark">
+            <div class="lang-block">
+                <ul>[[$lang_block]]</ul>
+            </div>
+        </div>
+        <div class="menu"><img src="/assets/img/menu.png" alt=""></div>
+        <div class="langy">
+            <div class="lang-block">
+                <ul>[[$lang_block]]</ul>
+            </div>
+        </div>
     </div>
 
 
 </header>
-
-
-
-
-
-
 <div class="main">
-
-
-
-
-
-
-
     <div class="wrap-lines"><div class="wrap-container"><div class="line line1 active"></div><div class="line line2"></div><div class="line line3"></div><div class="line line4"></div><div class="line line5"></div><div class="line line9"></div></div></div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <section class="sect sect10 arti-sect"><div class="fonn-arti"></div><div class="container">
-            <div class="article"><ul class="breadcrumb"><li><a href="/"><img src="./img/homee.png" alt="">home</a></li><li><a href="/">products</a></li><li><a href="/">company</a></li><li class="active">articles</li></ul>
+            <div class="article">
+                [[!pdoCrumbs?
+                &tplHome=`@INLINE
+                <li><a href="[[++site_url]]"><img
+                                src="/assets/img/homee.png" alt="">home</a>
+                </li>
+                `
+                &showHome=`1`
+                &showAtHome=`0`
+                ]]
 
-
-                <div id=selectyBoxi><div class="closs"><img src="./img/closy.png" alt=""></div>
+                <div id=selectyBoxi>
+                    <div class="closs"><img src="/assets/img/closy.png" alt="">
+                    </div>
                     <p class=valueTags name=selects>category</p><div class="clear"></div>
                     <ul id=selectyMenuBoxi>
-
-                        <li class=options>virtual reality</li>
-                        <li class=options>augmented reality</li>
-                        <li class=options>virtual arhitects</li>
-
+                        <li class="options">All</li>
+                        [[pdoResources?
+                        &parents=`[[*id]]`
+                        &tpl=`@INLINE
+                        <li class="options" data-parent="[[+id]]">
+                            {{+pagetitle:strtolower:ucfirst}}
+                        </li>
+                        `
+                        &showLog=`0`
+                        &showUnpublished=`1`
+                        &depth=`0`
+                        ]]
                     </ul>
                 </div>
 
-
-
                 <div class="arti">
-                    <h3>Articles</h3>
-                    <div class="virtu">
-
-
-                        <div class="left-virt"><img src="./img/articels_1.png" alt=""><div class="lead-more">lead more</div><div class="mess"><div class="left-mess"><span>223</span><img src="./img/mess.png" alt=""></div><div class="right-mess"><span>223</span><img src="./img/seen.png" alt=""></div></div></div>
-                        <div class="right-virt"><h4>VIRTUAL reality</h4><p>Step inside a premise and be able not only to move your way through but also change materials, colors, lighting, and even more interact with the environment.</p></div>
-                    </div>
-
-                    <div class="virtu">
-                        <div class="left-virt"><img src="./img/articels_1.png" alt=""><div class="lead-more">lead more</div><div class="mess"><div class="left-mess"><span>223</span><img src="./img/mess.png" alt=""></div><div class="right-mess"><span>223</span><img src="./img/seen.png" alt=""></div></div></div>
-                        <div class="right-virt"><h4>VIRTUAL reality</h4><p>Step inside a premise and be able not only to move your way through but also change materials, colors, lighting, and even more interact with the environment.</p></div>
-                    </div>
-                    <div class="virtu">
-
-                        <div class="left-virt"><img src="./img/articels_1.png" alt=""><div class="lead-more">lead more</div><div class="mess"><div class="left-mess"><span>223</span><img src="./img/mess.png" alt=""></div><div class="right-mess"><span>223</span><img src="./img/seen.png" alt=""></div></div></div>
-                        <div class="right-virt"><h4>VIRTUAL reality</h4><p>Step inside a premise and be able not only to move your way through but also change materials, colors, lighting, and even more interact with the environment.</p></div>
-                    </div>
-
-
-
-
-
-
-
-
-
-
-                    <div class="virtu">
-                        <div class="left-virt"><img src="./img/articels_1.png" alt=""><div class="lead-more">lead more</div><div class="mess"><div class="left-mess"><span>223</span><img src="./img/mess.png" alt=""></div><div class="right-mess"><span>223</span><img src="./img/seen.png" alt=""></div></div></div>
-                        <div class="right-virt"><h4>VIRTUAL reality</h4><p>Step inside a premise and be able not only to move your way through but also change materials, colors, lighting, and even more interact with the environment.</p></div>
-                    </div>
-
-                    <div class="virtu">
-                        <div class="left-virt"><img src="./img/articels_1.png" alt=""><div class="lead-more">lead more</div><div class="mess"><div class="left-mess"><span>223</span><img src="./img/mess.png" alt=""></div><div class="right-mess"><span>223</span><img src="./img/seen.png" alt=""></div></div></div>
-                        <div class="right-virt"><h4>VIRTUAL reality</h4><p>Step inside a premise and be able not only to move your way through but also change materials, colors, lighting, and even more interact with the environment.</p></div>
-                    </div>
-
-                    <div class="virtu">
-                        <div class="left-virt"><img src="./img/articels_1.png" alt=""><div class="lead-more">lead more</div><div class="mess"><div class="left-mess"><span>223</span><img src="./img/mess.png" alt=""></div><div class="right-mess"><span>223</span><img src="./img/seen.png" alt=""></div></div></div>
-                        <div class="right-virt"><h4>VIRTUAL reality</h4><p>Step inside a premise and be able not only to move your way through but also change materials, colors, lighting, and even more interact with the environment.</p></div>
-                    </div>
-
-                    <div class="virtu">
-                        <div class="left-virt"><img src="./img/articels_1.png" alt=""><div class="lead-more">lead more</div><div class="mess"><div class="left-mess"><span>223</span><img src="./img/mess.png" alt=""></div><div class="right-mess"><span>223</span><img src="./img/seen.png" alt=""></div></div></div>
-                        <div class="right-virt"><h4>VIRTUAL reality</h4><p>Step inside a premise and be able not only to move your way through but also change materials, colors, lighting, and even more interact with the environment.</p></div>
-                    </div>
-
-                    <div class="virtu">
-                        <div class="left-virt"><img src="./img/articels_1.png" alt=""><div class="lead-more">lead more</div><div class="mess"><div class="left-mess"><span>223</span><img src="./img/mess.png" alt=""></div><div class="right-mess"><span>223</span><img src="./img/seen.png" alt=""></div></div></div>
-                        <div class="right-virt"><h4>VIRTUAL reality</h4><p>Step inside a premise and be able not only to move your way through but also change materials, colors, lighting, and even more interact with the environment.</p></div>
-                    </div>
+                    <h3>[[*pagetitle]]</h3>
+                    <div class="article-wrap"></div>
                     <div class="clear"></div>
                 </div>
             </div>
-
-
-
-
 
         </div></section>
 
 </div>
 
-<div class="menus open"><div class="container">
-        <div class="left-menus"><ul class="comp">
-                <li class="home">Homepage</li>
-                <li class="home">About us</li>
-                <li class="home">Services</li>
-                <li class="home">Portfolio</li>
-                <li class="home">Blog</li>
+[[$menus_open]]
 
-                <li class="home">Contact</li>
-            </ul>
-            <ul class="mobiles">
-                <li class="pages">Homepage</li>
-                <li class="pages">About us</li>
-                <li class="pages">Services</li>
-                <li class="pages">Portfolio</li>
-                <li class="pages">Blog</li>
-                <li class="pages">Contact</li>
-            </ul></div>
-        <div class="under-movie"><div class="right-menus" id="boxscroll">
-                <div class="movie">
-                    <div class="item-movie">
-                        <img src="../img/menu00.png" alt="">
-                        <p>ARCHITECTURAL MOVIE</p>
-                    </div>
-                    <div class="item-movie">
+<script src="/assets/js/jquery-3.2.1.min.js"></script>
+<script>
+    $(function () {
+        var url = '/ajax-articles';
+        var wrapper = $('.article-wrap');
+        $.get({
+            url: url,
+            success: function (resp) {
+                wrapper.html(resp);
+            }
+        });
 
-                        <img src="../img/menu04.png" alt="">
-                        <p>MOTION STILL IMAGE</p>
-                    </div>
-                    <div class="item-movie">
-                        <img src="../img/menu05.png" alt="">
-                        <p>ARCHITECTURAL MOVIE</p>
-                    </div>
-                    <div class="item-movie">
-                        <img src="../img/menu05.png" alt="">
-                        <p>ARCHITECTURAL MOVIE</p>
-                    </div>
-                </div>
-            </div><div class="upss-aroww"></div><div class="down-aroww"></div><div class="back"><img src="../img/back.png" alt="">back</div></div>
-
-
-    </div><div class="close"><img src="../img/close.png" alt=""></div>
-    <div class="wrap-lines5"><div class="wrap-container5"><div class="line0 line01"><div class="white-line"></div></div><div class="line0 line02"><div class="white-line"></div></div><div class="line0 line03"><div class="white-line"></div></div><div class="line0 line04"><div class="white-line"></div><div class="white-line9"></div></div></div></div>
-
-
-
-
-
-
-    <div class="leter-menu"><img src="../img/menu9.png" alt=""></div><div class="link"><div class="block-link"><div class="item-link"><a href="/"><img src="./img/face.png" alt=""></a></div><div class="item-link"><a href="/"><img src="./img/insta.png" alt=""></a></div><div class="item-link"><a href="/"><img src="./img/bebe.png" alt=""></a></div></div></div><div class="logo"><a href=""><img src="./img/logo.png" alt=""></a></div>
-    <div class="lang"><div class="lang-block"><ul><li class="langv">ru</li><li class="langv acti">en</li></ul></div></div>
-</div>
-
-
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/owl-carousel.min.js"></script>
-<script src="js/nice.js"></script>
-<script src="js/comon.js"></script>
-
-
-
-
-
-
-
-
-
+        $('#selectyMenuBoxi li').on('click', function () {
+            var data = $(this).data('parent');
+            $.get({
+                url: url,
+                data: {'parent': data},
+                success: function (resp) {
+                    wrapper.html(resp);
+                }
+            });
+        });
+    });
+</script>
+<script src="/assets/js/owl-carousel.min.js"></script>
+<script src="/assets/js/nice.js"></script>
+<script src="/assets/js/comon.js"></script>
 
 
 </body>
-
 </html>
