--- a/assets/app/templates/blog_item.phtml
+++ b/assets/app/templates/blog_item.phtml
@@ -1,4 +1,4 @@
-[[$head?&style=`1`&media=`1`&vik=`1`&main=`1`&classes=`article_one`]]
+[[$head?&vik=`1`&main=`1`&classes=`article_one`]]
 <section class="sect sect0 sect-heads" id="sect0">
     <header class="headers"
             style="background: url([[*main_article_photo]])no-repeat center;">
@@ -77,8 +77,7 @@
 
         </div>
         <div class="comment">
-            <div class="watt"><img src="/assets/img/watt.png" alt="">1423
-            </div>
+            <div class="watt"><img src="/assets/img/watt.png" alt="">[[!HitsPage]]</div>
             <div class="watt"><img src="/assets/img/lett.png" alt="">223
             </div>
         </div>
