--- a/assets/app/templates/main.phtml
+++ b/assets/app/templates/main.phtml
@@ -1,10 +1,4 @@
-[[$head?
-&mScrollbar=`1`
-&style=`1`
-&media=`1`
-&vik=`1`
-&classes=`home-page`
-]]
+[[$head?&mScrollbar=`1`&vik=`1`&classes=`home-page`]]
 
 <section class="sect sect0" id="sect0">
 
