--- a/assets/app/templates/portfolio.phtml
+++ b/assets/app/templates/portfolio.phtml
@@ -1,4 +1,4 @@
-[[$head?&style=`1`&media=`1`&classes=`protfolio`]]
+[[$head?&classes=`protfolio`]]
 
 <header class="neww-headers">
     <div class="numb">
@@ -126,35 +126,287 @@
                 sorting(toSort)
             }
         });
-        
+//        function sorting(toSort) {
+//            hash1 = /double-size/;
+//            hash2 = /vertical/;
+//            row = 0;
+//            pos = 1;
+//            elem =[];
+//            rows = [];
+//            rows[row] = [];
+//            z = 0;
+//            for (i=1; i < toSort.length+1; i++ ) {
+//                pos % 3 == 0 ? (row += 1,  rows[row] = [], z = 0) : '';
+//                if (hash1.test(toSort[i-1].classList.value)){
+//                    rows[row][z] = {position:pos, size:2,html:toSort[i-1]};
+//                    z++
+//                    pos += 1;
+//                    rows[row][z] = {position:pos,size:0};
+//                    z++
+//                    pos += 1;
+//                }else if (hash2.test(toSort[i-1].classList.value)){
+//                    rows[row][z] = {position:pos, size:3,html:toSort[i-1]};
+//                    pos += 1;
+//                    z++
+//                }else {
+//                    rows[row][z] = {position:pos, size:1,html:toSort[i-1]};
+//                    pos += 1;
+//                    z++
+//                }
+//
+//            }
+//            endSort = false
+//        function afterSorting() {
+//
+//            for(i=0; i < rows.length; i++ ){
+//                    if(rows[i].length < 3) {
+//                        if( i < rows.length - 1) {
+//                            if(endSort) {checkVertical();return true;}
+//                            resort(i);
+//                            return true;
+//                        }else {
+//                            checkVertical();
+//                        }
+//                    }
+//                }
+//
+//
+//        }
+//        afterSorting();
+//            function resort(i) {
+//                j = 1;
+//                k = 0;
+//                z = true;
+//                while (z) {
+//                    if(rows[i+j][k].size != 2 && rows[i+j][k].size != 0) {
+//                        rows[i][rows[i].length]  = rows[i+j][k];
+//                        z =  rows[i+j].splice(k,1);
+//                        z = false;
+//                    }
+//                    k+=1;
+//                    rows[i+j].length  < k ? (j+=1, k = 0)  : ' ';
+//                    if( i+j > rows.length - 1  ){ z = false;endSort = true;}
+//                }
+//                afterSorting();
+//            }
+//            function checkVertical() {
+//                getVertPosition = vertItem();
+//                checkUnic = ifUnic(getVertPosition);
+//                console.log(checkUnic);
+//
+//
+//
+//            }
+//            function ifUnic() {
+//                for (i= 0; i< arr.length;i++){
+//
+//                }
+//            }
+//
+//            function vertItem() {
+//                var arr = ''
+//                for(l=0; l < rows.length; l++ ) {
+//                    for (o=0; o < rows[l].length; o++) {
+//                        if(rows[l][o].size == 3) {
+//                            if(l + 1 <= rows.length) {
+//                                arr.push([l,o])
+//                            }
+//                        }
+//                    }
+//                }
+//                return arr;
+//            }
+
+          /***/
+
+
+
+//            function checkVertical() {
+//
+//                for(l=0; l < rows.length; l++ ) {
+//                    for (o=0; o < rows[l].length; o++) {
+//                        if(rows[l][o].size == 3) {
+//                            if(l + 1 <= rows.length) {
+//                                checkResort(l,o);
+//                            }
+//                        }
+//                    }
+//                }
+//
+//            }
+//            function  checkResort(l,o) {
+//
+//                for (p = 0; p < rows[l+1].length; p++) {
+//                    if(rows[l+1][p].size == 2) {
+//                        sortVertic(p, l, o);
+//                    }
+//                }
+//            }
+//
+//            function sortVertic(p, l, o){
+//                severals = 0;
+//                for (x = 0; x < rows[l].length; x++) {
+//                    if(rows[l][x].size == 3){
+//                        severals++
+//                        console.log(severals+'jjj');
+//                    }
+//                }
+//                collect(p,l,o,severals);
+//            }
+//            function collect(p,l,o,several) {
+////                debugger
+//
+//                if(severals < 2 && p != null){
+//                    console.log(rows);
+//                    if(p == 0 && o !=2 ) {
+//                        var eld = rows[l][o];
+//                        var el1 = rows[l][o+1];
+//
+//                        console.log(el1);
+//                        console.log('******');
+//                        console.log(eld);
+//                        g = rows[i].splice(rows[l][o],2);
+//
+//                        rows[l][o] = el1;
+//                        rows[l][o + 1] = eld;
+//
+//                    }
+//                }
+//            }
+//            console.log(rows);
+//        }
+
         function sorting(toSort) {
             hash1 = /double-size/;
             hash2 = /vertical/;
-            rows = 0;
-            row = 1;
+            row = 0;
             pos = 1;
-            sortedGor = [];
-            for (i=1; i < toSort.length+1; i++ ) {
-                console.log(i);
-                if (hash1.test(toSort[i-1].classList.value)){
-                        if(pos%3 == 0) {
-                            sortedGor.push(toSort[i]);
-                            sortedGor.push(toSort[i-1]);
-                            i += 1;
-                        }
-                    pos += 2;
-                }else {
-                    sortedGor.push(toSort[i-1]);
-                    pos += 1;
+            nextRow = true;
+            elem = [];
+            elb = null;
+            var rows =[]; rows[0] = [];rows[1] = [];rows[2] = [];
+
+            z = 0;
+
+            for (i = 1; i < toSort.length + 1; i++) {
+                pos % 3 == 0 ? (row += 1, rows[row] = [], z = 0) : '';
+                if (hash1.test(toSort[i - 1].classList.value)) {
+                    rows[1].push({position: pos, size: 2, html: toSort[i - 1]});
+                } else if (hash2.test(toSort[i - 1].classList.value)) {
+                    rows[2].push({position: pos, size: 3, html: toSort[i - 1]});
+                } else {
+                    rows[0].push({position: pos, size: 1, html: toSort[i - 1]});
                 }
-                pos % 3 == 0 ? row += 1 : '';
-                console.log('row' + row);
+                z++
             }
-            rows = row;
-            console.log('sorted');
-            console.log(sortedGor);
-            $('.collection-wraper').html(sortedGor);
+
+            function arrLen() {
+                for (i=0; i < rows.length; i++) {
+                    if(!rows[i].length) {
+                        console.log('---------');
+                        console.log(i);
+                        console.log('---------');
+
+                        k =  rows.splice(rows[i],1);
+                    }
+                }
+                return rows.length;
+            }
+            function randEl(utnits) {
+                return Math.floor(Math.random() * utnits);
+            }
+
+            function getLen() {
+                return arrLen()
+            }
+            function getPos() {
+                posEl3 = [];
+                posEl2 = [];
+                sortedArr = []
+                z = 0;
+                row = 1;
+               while(rows.length) {
+                   utnits = getLen();
+                   el = randEl(utnits)
+                   elArr = el ? rows[el][0] : undefined;
+                   console.log(el);
+                   console.log(rows);
+                   if(elArr != undefined) {
+                       if(el == 2 && z != 2) {
+                           k = rows[el].splice(rows[el][0],1);
+                           sortedArr.push(k);
+                           posEl3 = [row, z];
+                           z++
+                       }else if(el == 1) {
+                           if(posEl3.length) {
+                                if(posEl3[1] == z ) {
+                                    sortedArr.push({size:0});
+                                    k = rows[el].splice(rows[el][0],1);
+                                    sortedArr.push(k);
+                                    z +=2;
+                                }else {
+                                    k = rows[el].splice(rows[el][0],1);
+                                    sortedArr.push(k);
+                                    z +=2;
+                                }
+                           }
+                       }else if(el == 0) {
+                           if(posEl3[1] == z ) {
+                               sortedArr.push({size:0});
+                               k = rows[el].splice(rows[el][0],1);
+                               sortedArr.push(k);
+                               z++;
+
+                           }else {
+                               k = rows[el].splice(rows[el][0],1);
+                               sortedArr.push(k);
+                               z++;
+                           }
+
+                       }
+                   }
+
+                   row = z % 3 ? row++ : row;
+
+               }
+
+            }getPos();
+
+            console.log(sortedArr);
+
         }
+
+
+
+
+//        function sorting(toSort) {
+//            hash1 = /double-size/;
+//            hash2 = /vertical/;
+//            rows = 0;
+//            row = 1;
+//            pos = 1;
+//            sortedGor = [];
+//            for (i=1; i < toSort.length+1; i++ ) {
+//                console.log(i);
+//                if (hash1.test(toSort[i-1].classList.value)){
+//                        if(pos%3 == 0) {
+//                            sortedGor.push(toSort[i]);
+//                            sortedGor.push(toSort[i-1]);
+//                            i += 1;
+//                        }
+//                    pos += 2;
+//                }else {
+//                    sortedGor.push(toSort[i-1]);
+//                    pos += 1;
+//                }
+//                pos % 3 == 0 ? row += 1 : '';
+//                console.log('row' + row);
+//            }
+//            rows = row;
+//            console.log('sorted');
+//            console.log(sortedGor);
+//            $('.collection-wraper').html(sortedGor);
+//        }
 
         $('#selectyMenuBoxi li').on('click', function () {
             var data = $(this).data('parent');
